Updated from Publii

--- a/search.html
+++ b/search.html
@@ -28,4 +28,4 @@
                   this.classList.add('is-loaded');
                }, false);
          }
-      }</script></body></html>
+      }</script><div class="onesignal-customlink-container"></div></body></html>
