--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
     OneSignal.init({
       appId: "9ce72d1f-fcde-4bc0-9fd9-19dd99f9d455",
     });
-  });</script></head><body><div class="onesignal-customlink-container"></div><header class="header" id="js-header"><a href="https://pixello.fun/" class="logo">Pixello</a></header><main><div class="wrapper page page--search"><div class="hero"><h1>Search</h1></div><div class="post__inner"><form action="https://pixello.fun/search.html" class="page--search__form"><input type="search" name="q" placeholder="search..." class="page--search__input"> <button type="submit">Search</button></form><script>(function () {
+  });</script></head><body><header class="header" id="js-header"><a href="https://pixello.fun/" class="logo">Pixello</a></header><main><div class="wrapper page page--search"><div class="hero"><h1>Search</h1></div><div class="post__inner"><form action="https://pixello.fun/search.html" class="page--search__form"><input type="search" name="q" placeholder="search..." class="page--search__input"> <button type="submit">Search</button></form><script>(function () {
 					var cx = '';
 					var gcse = document.createElement('script');
 					gcse.type  = 'text/javascript';
@@ -28,4 +28,4 @@
                   this.classList.add('is-loaded');
                }, false);
          }
-      }</script><div class="onesignal-customlink-container"></div></body></html>
+      }</script></body></html>
