Updated from Publii

--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
     OneSignal.init({
       appId: "9ce72d1f-fcde-4bc0-9fd9-19dd99f9d455",
     });
-  });</script></head><body><header class="header" id="js-header"><a href="https://pixello.fun/" class="logo">Pixello</a></header><main><div class="wrapper page page--search"><div class="hero"><h1>Search</h1></div><div class="post__inner"><form action="https://pixello.fun/search.html" class="page--search__form"><input type="search" name="q" placeholder="search..." class="page--search__input"> <button type="submit">Search</button></form><script>(function () {
+  });</script></head><body><header class="header" id="js-header"><a href="https://pixello.fun/" class="logo">Pixello</a><nav class="navbar js-navbar"><button class="navbar__toggle js-toggle" aria-label="Menu"><span class="navbar__toggle-box"><span class="navbar__toggle-inner">[MISSING TRANSLATION]</span></span></button><ul class="navbar__menu"><li><a href="https://pixello.fun/refer.html" target="_blank">Refer &amp; Earn</a></li><li><a href="https://pixello.fun/accounts-tc.html" target="_blank">Accounts T&amp;C</a></li></ul></nav></header><main><div class="wrapper page page--search"><div class="hero"><h1>Search</h1></div><div class="post__inner"><form action="https://pixello.fun/search.html" class="page--search__form"><input type="search" name="q" placeholder="search..." class="page--search__input"> <button type="submit">Search</button></form><script>(function () {
 					var cx = '';
 					var gcse = document.createElement('script');
 					gcse.type  = 'text/javascript';
