Updated from Publii

--- a/search.html
+++ b/search.html
@@ -28,4 +28,4 @@
                   this.classList.add('is-loaded');
                }, false);
          }
-      }</script></body></html>
+      }</script><script id="dsq-count-scr" src="https://pixello.disqus.com/count.js" async></script></body></html>
