--- a/404.html
+++ b/404.html
@@ -141,7 +141,6 @@
 <nav id="header-menu-1" class="header-menu-1" data-id="menu" data-menu="type-2:default" data-dropdown="type-1:simple" data-responsive="no" itemscope="" itemtype="http://schema.org/SiteNavigationElement">
 
 	<ul class="menu">
-<li class="page_item page-item-267 current_page_item current-menu-item"><a href="https://friedsteel.github.io/pixelloweb-test/404-2/" aria-current="page" class="ct-menu-link">#267 (no title)</a></li>
 <li class="page_item page-item-325"><a href="https://friedsteel.github.io/pixelloweb-test/accounts-tc/" class="ct-menu-link">Premium Accounts T&#038;C</a></li>
 <li class="page_item page-item-12"><a href="https://friedsteel.github.io/pixelloweb-test/" class="ct-menu-link">Pricing</a></li>
 </ul></nav>
@@ -202,6 +201,8 @@
 
 
 <h2 class="has-text-align-center">Oops! That page can’t be found.</h2>
+<h4 class="has-text-align-center">
+<a href="https://pixello.fun/">Click here</a> to check our pricing</h4>
 
 
 
@@ -277,7 +278,6 @@
 <div class="ct-panel-content" data-device="mobile">
 <nav class="mobile-menu" data-id="mobile-menu" data-type="type-1:interactive">
 	<ul>
-<li class="page_item page-item-267 current_page_item current-menu-item"><a href="https://friedsteel.github.io/pixelloweb-test/404-2/" aria-current="page" class="ct-menu-link">#267 (no title)</a></li>
 <li class="page_item page-item-325"><a href="https://friedsteel.github.io/pixelloweb-test/accounts-tc/" class="ct-menu-link">Premium Accounts T&#038;C</a></li>
 <li class="page_item page-item-12"><a href="https://friedsteel.github.io/pixelloweb-test/" class="ct-menu-link">Pricing</a></li>
 </ul></nav>
