added social redirects

--- a/instagram/index.html
+++ b/instagram/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>WhatsApp - Pixello</title>
-   <meta http-equiv="refresh" content="3; url = https://wa.me/918169011947?text=Hi%2C%20I%20would%20like%20to%20buy%20a%20subscription!" />
+   <title>Instagram - Pixello</title>
+   <meta http-equiv="refresh" content="3; url = https://instagram.com/pixello.co.in/" />
 </head>
 <body onload="randomWityLine();">
 <div>
