--- a/instagram/index.html
+++ b/instagram/index.html
@@ -6,7 +6,7 @@
 </head>
 <body onload="randomWityLine();">
 <div>
-  <h2>Redirecting...</h2>
+  <h2>Taking you to Instagram...</h2>
   <p id="randomWity">
 </div>
 <script>
