--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body onload="randomWityLine();">
 <div>
-  <h2>Redirecting...</h2>
+  <h2>Taking you to WhatsApp...</h2>
   <p id="randomWity">
 </div>
 <script>
