--- a/404.html
+++ b/404.html
@@ -302,11 +302,13 @@
 		</div>
 		<div class="ct-panel-content" data-device="desktop"></div>
 <div class="ct-panel-content" data-device="mobile">
-<nav class="mobile-menu" data-id="mobile-menu" data-type="type-1:interactive">
-	<ul>
-<li class="page_item page-item-325"><a href="https://pixello.co.in/accounts-tc/" class="ct-menu-link">Premium Accounts T&#038;C</a></li>
-<li class="page_item page-item-12"><a href="https://pixello.co.in/" class="ct-menu-link">Pricing</a></li>
-</ul></nav>
+	<nav class="mobile-menu" data-id="mobile-menu" data-interaction="click" data-toggle-type="type-1" aria-label="Off Canvas Menu">
+		<ul id="menu-header-menu-1" class="">
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-768"><a href="https://pixello.co.in/how-it-works/" class="ct-menu-link">How it Works?</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-767"><a href="https://pixello.co.in/" class="ct-menu-link">Pricing</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-769"><a href="https://pixello.co.in/rules/" class="ct-menu-link">Account Rules</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-770"><a href="https://pixello.co.in/tc/" class="ct-menu-link">Terms &#038; Conditions</a></li>
+	</ul></nav>
 
 </div>
 </div></div>
