--- a/pay/index.html
+++ b/pay/index.html
@@ -306,7 +306,7 @@
 			<style>/*! elementor - v3.5.4 - 23-01-2022 */
 .elementor-heading-title{padding:0;margin:0;line-height:1}.elementor-widget-heading .elementor-heading-title[class*=elementor-size-]>a{color:inherit;font-size:inherit;line-height:inherit}.elementor-widget-heading .elementor-heading-title.elementor-size-small{font-size:15px}.elementor-widget-heading .elementor-heading-title.elementor-size-medium{font-size:19px}.elementor-widget-heading .elementor-heading-title.elementor-size-large{font-size:29px}.elementor-widget-heading .elementor-heading-title.elementor-size-xl{font-size:39px}.elementor-widget-heading .elementor-heading-title.elementor-size-xxl{font-size:59px}</style>
 <p class="elementor-heading-title elementor-size-default"><br><strong>UPI:</strong> pixello@icici<br><br>
-For non-Indian payments, please <a href="https://wa.me/917021880521?text=Hi%2C%20please%20help%20me%20with%20non-Indian%20payment%20methods." target="_blank" style="color:blue;">contact our WhatsApp team</a>.</p>		</div>
+For non-Indian payments, please <u><a href="https://wa.me/917021880521?text=Hi%2C%20please%20help%20me%20with%20non-Indian%20payment%20methods." target="_blank" style="color:blue;">contact our WhatsApp team</a></u>.</p>		</div>
 				</div>
 				<div class="elementor-element elementor-element-38e8672 elementor-widget elementor-widget-spacer" data-id="38e8672" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
@@ -394,7 +394,7 @@ For non-Indian payments, please <a href="https://wa.me/917021880521?text=Hi%2C%2
 <div data-row="bottom"><div class="ct-container" data-columns-divider="md:sm"><div data-column="copyright">
 <div class="ct-footer-copyright" data-id="copyright">
 
-	<p>Copyright © 2022 Pixello</p>
+	<p>Copyright © 2023 Pixello and Co.</p>
 </div>
 </div></div></div></footer>
 </div>
